--- a/styles/landing.css
+++ b/styles/landing.css
@@ -7,6 +7,10 @@
     font-family: "Raleway", sans-serif;
 }
 
+body{
+    background-color: #e1e5ed;
+}
+
 header{
     background-image: url(../Assets/Hero-bg.png);
     height: 698px;
@@ -120,4 +124,59 @@ nav{
     font-size: 20px;
     font-family: "Inter", sans-serif;
     color: #757575;
+}
+
+/* ========== User Feedback ========== */
+
+.user-feedback{
+    margin-top: 120px;
+}
+
+.fedback-header{
+    text-align: center;
+    font-size: 42px;
+    margin-bottom: 50px;
+}
+
+.fd-user{
+    display: flex;
+    gap: 20px;
+}
+
+.user{
+    width: 366px;
+    height: 260px;
+    background-color: white;
+    padding: 24px;
+    border-radius: 14px;
+    box-shadow: 2px 4px 6px rgba(187, 183, 183, 0.4);
+}
+
+.user img{
+    margin-bottom: 20px;
+}
+
+.user h4{
+    font-size: 22px;
+    font-weight: 700;
+    margin-bottom: 10px;
+}
+
+.user p{
+    font-size: 15px;
+    color: #757575;
+    margin-bottom: 30px;
+}
+
+.pimg{
+    display: flex;
+    gap: 20px;
+}
+
+.pimg h4{
+    margin-bottom: 5px;
+}
+
+.pimg p{
+    font-family: "Inter", sans-serif;
 }
