--- a/styles/landing.css
+++ b/styles/landing.css
@@ -8,7 +8,7 @@
 }
 
 body{
-    background-color: #e1e5ed;
+    background-color: #F5F8FF;
 }
 
 header{
@@ -179,4 +179,34 @@ nav{
 
 .pimg p{
     font-family: "Inter", sans-serif;
+}
+
+/* ========== focus section ========== */
+
+.focus-better{
+    background-color: #FFFFFF;
+    margin-top: 120px;
+    height: 696px;
+    border-radius: 14px;
+    padding: 71px 150px;
+}
+
+.focus-main{
+    text-align: center;
+}
+
+.focus-main h1{
+    font-size: 50px;
+    font-weight: 800;
+    margin-bottom: 20px;
+}
+
+.focus-main p{
+    color: #00000080;
+    margin-bottom: 20px;
+}
+
+.focus-img img{
+    border-radius: 48px;
+    margin-top: 20px;
 }
