implement contact form with inputs and submit button

--- a/styles/landing.css
+++ b/styles/landing.css
@@ -210,3 +210,58 @@ nav{
     border-radius: 48px;
     margin-top: 20px;
 }
+
+/* ========== contact section ========== */
+
+.contact-section{
+    display: flex;
+    align-items: center;
+    gap: 15px;
+    margin-top: 120px;
+}
+
+.contact-title{
+    font-size: 57px;
+    font-weight: 800;
+}
+
+.contact-form{
+    width: 497px;
+}
+
+.contact-form label{
+    display: flex;
+    align-items: center;
+    font-size: 18px;
+    font-weight: 500;
+    font-family: "Inter", sans-serif;
+    margin-bottom: 5px;
+}
+
+.contact-form input{
+    width: 500px;
+    height: 50px;
+    padding: 12px 16px;
+    font-size: 18px;
+    border: none;
+    border-radius: 10px;
+    margin-bottom: 20px;
+}
+
+.contact-form textarea{
+    border: none;
+    border-radius: 10px;
+    padding: 12px 16px;
+    font-size: 18px;
+}
+
+.contact-form button{
+    font-size: 16px;
+    font-weight: 500;
+    padding: 22px 202px;
+    background-color: #4E47FF;
+    color: white;
+    border: none;
+    border-radius: 8px;
+    margin-top: 20px;
+}
